@@ -87,12 +87,7 @@ const httpserver = http.createServer((req, res) => {
                verifytoken(req)) {
       if (req.url.startsWith("/cdn/cdnboxStates")) {
         res.writeHead(200, { 'Content-Type': 'application/json' });
-        if (req.url.match(/nocache/)) {
-          function replacer(key, value) { if (key == 'cache') { return undefined; } return value; }
-          res.end(JSON.stringify(cdnboxStates, replacer));
-        } else {
-          res.end(JSON.stringify(cdnboxStates));
-        }
+        res.end(JSON.stringify(cdnboxStates));
       } else if (req.url.startsWith("/cdn/api/states")) {
         res.writeHead(200, { "Content-Type": "application/json", "Access-Control-Allow-Origin": "*" });
         apiStates(req,res);
@@ -297,7 +292,7 @@ function htmlcdnboxes(req,res) {
       Math.round(cdnboxStates.globaldnscount.average) + '/' +
       Math.round(cdnboxStates.globaldnscount.limit) + '</span></div>' +
       '<table><tr><th>Name</th><th>BW</th><th>BwT</th><th>Perf</th><th>Score</th>' +
-      '<th>Bu.</th><th>HTTP</th><th>DNS</th><th>Tests</th></tr>'
+      '<th>Bu.</th><th>HTTP</th><th>DNS</th><th>IP</th><th>Tests</th></tr>'
   );
   for (var i=0; i < cdnboxStates.config.cdnboxes.length; i++ ) {
     var cdnboxState = cdnboxStates[cdnboxStates.config.cdnboxes[i].name];
@@ -316,8 +311,26 @@ function htmlcdnboxes(req,res) {
             cdnboxState.status):'no') +
         '</td>' +
         '<td class="status">' + (cdnboxState.config.isns?'yes':'no') + '</td>');
+    res.write( '<td class="status">');
+    if (cdnboxState.status == 'on') {
+      res.write('<span class="bw">4</span>');
+    } else {
+      res.write('<span class="bw ovbw">4</span>');
+    }
+    if (cdnboxStates.local.ipv6) {
+      if (cdnboxState.ipv6) {
+        if (cdnboxState.status6 == 'on') {
+          res.write('<span class="bw">6</span>');
+        } else {
+          res.write('<span class="bw ovbw">6</span>');
+	}
+      } else {
+        res.write('<span class="">6</span>');
+      }
+    }
+    res.write( '</td>');
+    res.write( '<td class="status">');
     if (cdnboxState.localtests) {
-      res.write( '<td class="status">');
       var testlist = Object.getOwnPropertyNames(cdnboxState.localtests);
       for (var j=0; j < testlist.length; j++) {
         if (cdnboxState.localtests[testlist[j]]) {
@@ -326,11 +339,8 @@ function htmlcdnboxes(req,res) {
           res.write('<span class="bw ovbw">' + testlist[j][0] + '</span>');
         }
       }
-      res.write( '</td>');
-    } else {
-      res.write('<td> </td>');
     }
-    res.write( '</tr>');
+    res.write( '</td></tr>');
   }
   res.write('</table>\n</body>\n</html>');
 }
@@ -379,7 +389,7 @@ function htmlconsole(res,token) {
     var cdnboxState = cdnboxStates[cdnboxStates.config.cdnboxes[i].name];
     if (cdnboxState.config.isns) {
       res.write(
-          '<iframe width="450" height="' + (cdnboxStates.config.cdnboxes.length * 25 + 90) + '" src="' +
+          '<iframe width="480" height="' + (cdnboxStates.config.cdnboxes.length * 25 + 90) + '" src="' +
           cdnboxState.config.proto + '//' + cdnboxState.config.hostname + '/cdn/cdnboxes?' +
           token + '"></iframe>\n'
       );
