@@ -53,11 +53,12 @@ var intervals = {};
 var maxinterval = 10000;
 
 process.on('message', (msg) => {
-  console.error('Starting probe for', msg.name, 'every', msg.interval, 'ms');
+  console.error('Starting probe for', msg.name, 'IPv'+msg.options.family, 'every', msg.interval, 'ms');
   if (msg.interval > maxinterval) { maxinterval = msg.interval; }
   getPerf(msg);
-  if (intervals[msg.name]) { timers.clearInterval(intervals[msg.name]); }
-  intervals[msg.name] = timers.setInterval( function () { return function () { getPerf(msg); }}(), msg.interval);
+  var probeid = msg.name+'_IP'+msg.options.family;
+  if (intervals[probeid]) { timers.clearInterval(intervals[probeid]); }
+  intervals[probeid] = timers.setInterval( function () { return function () { getPerf(msg); }}(), msg.interval);
 });
 
 // probes perf
@@ -71,10 +72,11 @@ function getPerf(msg) {
                 var perf = Date.now() - starttime;
                 // send probe only if not too late.
                 if (perf < maxinterval) {
-                  process.send({ "name": msg.name, 'status': res.statusCode, 'perf': perf });
+                  process.send({"type": "perf", "name": msg.name, "ipv": msg.options.family, "status": res.statusCode, "perf": perf });
                 }
-                console.log(' "type": "probe", "target": "' + msg.name + '",' +
-                            ' "time": ' + perf + ', "status": ' + res.statusCode);
+		var mess = '"type": "probe", "target": "' + msg.name + '", "ipv:": ' + msg.options.family + 
+			   ', "time": ' + perf + ', "status": ' + res.statusCode;
+                process.send({"type": "log", "msg": mess });
             });
         }
     }())
@@ -85,9 +87,11 @@ function getPerf(msg) {
             var perf = Date.now() - starttime;
             // send probe only if not too late.
             if (perf < maxinterval) {
-              process.send({ "name": msg.name, 'status': 'fail', 'perf': perf });
+              process.send({"type": "perf", "name": msg.name, "ipv": msg.options.family, "status": "fail", "perf": perf });
             }
-            console.log(' "type": "probe", "target": "' + msg.name + '",' + ' "time": ' + perf + ', "status": 0');
+            var mess = '"type": "probe", "target": "' + msg.name + '", "ipv:": ' + msg.options.family +
+		       ', "time": ' + perf + ', "status": 0';
+            process.send({"type": "log", "msg": mess });
             cdnboxStates.logerror('"error": "probe on ' + msg.name + ': ' + e.toString().replace(/"/g,'') + '"');
         }
     }());
@@ -98,32 +102,37 @@ function getPerf(msg) {
 if (cdnboxStates.config.tcprtt) { setInterval(() => {
 
   execFile('ss', ['-ntip'], { "maxBuffer": 50*1024*1024 }, (error, stdout, stderr) => {
-    if (error) { throw error; }
-    var findIP = /(\[?::ffff:)?([0-9]+\.[0-9]+\.[0-9]+\.[0-9]+)\]?:[0-9]+|\[?([0-9A-Fa-f]*:[0-9A-Fa-f:]+)\]?:[0-9]+/gm;
-    var findrtt = /rtt:([0-9]+)/gm;
-    var buff, ip2, rtt, log;
-    var pos = stdout.indexOf('ESTAB');
-    while (pos >= 0) {
-      findIP.lastIndex = pos;
-      findIP.exec(stdout);
-      buff = findIP.exec(stdout);
-      (buff[2] == null)?(ip2 = buff[3]):(ip2 = buff[2]);
-      if (ip2 !== "127.0.0.1" && ip2 !== "::1") {
-        findrtt.lastIndex = findIP.lastIndex;
-        rtt = findrtt.exec(stdout)[1];
-        log = ' "type": "tcprtt", "client": "' + ip2 + '",' + ' "time": ' + rtt;
-        var country = locationLookup.get(ip2);
-        log += ', "country": "' + ((country && country.country)?country.country.iso_code:'none') +
-            '", "continent": "' + ((country && country.continent)?country.continent.code:'none') + '"' +
-            ((country && country.location)?', "loc": [' + country.location.longitude + ',' +
-             country.location.latitude + ']':'');
-	if (ASNLookup) {
-          var asn = ASNLookup.get(ip2);
-          if (asn) { log += ', "aso": "' + asn.autonomous_system_organization + '"'; }
-	}
-        console.log(log);
+    try {
+      if (error) { throw error; }
+      var findIP = /(\[?::ffff:)?([0-9]+\.[0-9]+\.[0-9]+\.[0-9]+)\]?:[0-9]+|\[?([0-9A-Fa-f]*:[0-9A-Fa-f:]+)\]?:[0-9]+/gm;
+      var findrtt = /rtt:([0-9]+)/gm;
+      var buff, ip2, rtt, log;
+      var pos = stdout.indexOf('ESTAB');
+      while (pos >= 0) {
+        findIP.lastIndex = pos;
+        findIP.exec(stdout);
+        buff = findIP.exec(stdout);
+        (buff[2] == null)?(ip2 = buff[3]):(ip2 = buff[2]);
+        if (ip2 !== "127.0.0.1" && ip2 !== "::1") {
+          findrtt.lastIndex = findIP.lastIndex;
+          rtt = findrtt.exec(stdout)[1];
+          log = ' "type": "tcprtt", "client": "' + ip2 + '",' + ' "time": ' + rtt;
+          var country = locationLookup.get(ip2);
+          log += ', "country": "' + ((country && country.country)?country.country.iso_code:'none') +
+              '", "continent": "' + ((country && country.continent)?country.continent.code:'none') + '"' +
+              ((country && country.location)?', "loc": [' + country.location.longitude + ',' +
+               country.location.latitude + ']':'');
+	  if (ASNLookup) {
+            var asn = ASNLookup.get(ip2);
+            if (asn) { log += ', "aso": "' + asn.autonomous_system_organization + '"'; }
+	  }
+          process.send({"type": "log", "msg": log });
+        }
+        pos = stdout.indexOf('ESTAB', findIP.lastIndex===0?(pos+1):findIP.lastIndex);
       }
-      pos = stdout.indexOf('ESTAB', findIP.lastIndex===0?(pos+1):findIP.lastIndex);
+    } catch (e) {
+      cdnboxStates.logerror('"error": "exec/parse:  ' + e.toString().replace(/"\n/gm,'') + '"');
+      cdnboxStates.logerror('"error": "ssdebug: ' + stdout.btoa() + '"');
     }
   });
 
