@@ -66,7 +66,6 @@ cdnboxStates.loadconfig = function (init) {
     cdnboxStates[cdnbox.name] = { "config": cdnbox,
         "bucket": cdnboxStates[cdnbox.name] !== undefined && cdnboxStates[cdnbox.name].bucket !== undefined?
                   cdnboxStates[cdnbox.name].bucket:0,
-        "cache": {},
         "dnscount": cdnboxStates[cdnbox.name] === undefined || cdnboxStates[cdnbox.name].dnscount === undefined?
                     { "current": 0, "average": lconfig.dnsserver.dnscountavgmin }:
                     cdnboxStates[cdnbox.name].dnscount
@@ -211,6 +210,7 @@ cdnboxStates.init = async function (DNSserverclass, choose) {
           } else if (address.family == 6) {
             cdnboxState.ipv6 = address.address;
             cdnboxState.ipv6tab = convertIPv6totab(address.address);
+	    cdnboxState.status6 = 'fail';
           } 
         });
         if (cdnbox.name == cdnboxStates.local.config.name && cdnboxState.config.isns) {
@@ -248,7 +248,7 @@ function calcbw(cdnboxState) {
   }
   console.log(' "type": "bw", "bw": ' + cdnboxState.bw + ', "trendbw": ' + cdnboxState.trendbw + ', ' +
               '"penal": ' + Math.floor(cdnboxStates.local.config.penal + cdnboxStates.penalbucket.sigma / 4) + ', ' +
-              '"score": '+ cdnboxState.score + ', "vol": ' + delta);
+              '"score": '+ (isNaN(cdnboxState.score)?-1:cdnboxState.score) + ', "vol": ' + delta);
 }
 
 cdnboxStates.getstatevector = function() {
@@ -370,47 +370,72 @@ function calcScore(cdnboxState) {
 var probeChild;
 function getPerf(cdnbox) {
   if (cdnbox.fixscore !== undefined) { return; }
-  var cdnboxState = cdnboxStates[cdnbox.name], cdnboxCache = cdnboxState.cache;
+  var cdnboxState = cdnboxStates[cdnbox.name];
 
   // starts probechild process and process probe results.
   if (probeChild === undefined) {
     probeChild = childProcess.fork('lib/cdnboxProbe.js');
     probeChild.on('message', (msg) => {
-        var cdnboxState = cdnboxStates[msg.name];
-        cdnboxState.gettime = msg.perf;
-        cdnboxState.cache.perflastupdate = Date.now();
-        if (msg.status === 200) {
-          // give local trafic a bonus.
-          if (cdnboxState.config === cdnboxStates.local.config) { cdnboxState.gettime = Math.round(cdnboxState.gettime / 2); }
-          calcScore(cdnboxState);
-          if (cdnboxState.status === 'fail') { cdnboxState.status = 'on'; }
-        } else {
-          cdnboxState.score = 100000 + msg.status;
-          if (cdnboxState.status === 'on') { cdnboxState.status = 'fail'; }
+        if (msg.type == "perf") {
+          var cdnboxState = cdnboxStates[msg.name];
+          cdnboxState.gettime = msg.perf;
+	  if (msg.ipv == 4) { cdnboxState.perflastupdate = Date.now(); }
+ 	  else { cdnboxState.perflastupdate6 = Date.now(); }
+          if (msg.status === 200) {
+            // give local trafic a bonus.
+	    if (msg.ipv == 4) { 
+              if (cdnboxState.config === cdnboxStates.local.config) { cdnboxState.gettime = Math.round(cdnboxState.gettime / 2); }
+              calcScore(cdnboxState);
+	      if (cdnboxState.status === 'fail') { cdnboxState.status = 'on'; }
+	    } else {
+	      if (cdnboxState.status6 === 'fail') { cdnboxState.status6 = 'on'; }
+	    }
+          } else {
+	    if (msg.ipv == 4) { 
+              cdnboxState.score = 100000 + msg.status;
+              if (cdnboxState.status === 'on') { cdnboxState.status = 'fail'; }
+	    } else {
+              if (cdnboxState.status6 === 'on') { cdnboxState.status6 = 'fail'; }
+	    }
+          }
+        } else if (msg.type == "log") {
+          console.log(msg.msg);
+        } else if (msg.type == "err") {
+          logerror('"error": "' + msg.error + '"');
         }
     });
   }
 
   // starts probe or restart if unresponsive.
-  if (cdnboxCache.perflastupdate === undefined || (Date.now() - cdnboxCache.perflastupdate > 20000)) {
+  if ((cdnboxState.perflastupdate === undefined || (Date.now() - cdnboxState.perflastupdate > 20000)) ||
+      (cdnboxState.ipv6 != undefined && 
+       (cdnboxState.perflastupdate6 === undefined || (Date.now() - cdnboxState.perflastupdate6 > 20000)))) {
     var perfoptions, myperfURL = cdnbox.perfURL;
     if (cdnbox.perfURL === undefined) { myperfURL = cdnbox.proto + '//' + cdnbox.hostname + '/cdn/image.gif'; } 
     var pu = url.parse(myperfURL);
     perfoptions = { protocol: pu.protocol, port: pu.port, path: pu.path, agent: false };
-    if (cdnboxState.netint !== undefined) {
-      perfoptions.hostname = '127.0.0.1';
-      perfoptions.servername = pu.hostname
-    } else {
-      perfoptions.hostname = cdnbox.hostname;
-    }
     perfoptions.headers = { 'Host': pu.hostname, 'Connection': 'close', 'User-Agent': 'CDNBoxBot 1.0' };
-    if (cdnboxCache.perflastupdate !== undefined && (Date.now() - cdnboxCache.perflastupdate > 20000)) {
+    perfoptions.hostname = cdnbox.hostname;
+    perfoptions.servername = pu.hostname
+    if (cdnboxState.perflastupdate !== undefined && (Date.now() - cdnboxState.perflastupdate > 20000)) {
       cdnboxState.score = 100000;
       if (cdnboxState.status === 'on') { cdnboxState.status = 'fail'; }
       logerror('"error": "getPerf: timeout on ' + cdnbox.name + '"');
     }
-    probeChild.send({ 'name': cdnbox.name, 'interval': 10000, 'options': perfoptions },
-                    function (e) { if (e !== null) probeChild = undefined; });
+    if (cdnboxState.perflastupdate === undefined || (Date.now() - cdnboxState.perflastupdate > 20000)) {
+      perfoptions.family = 4;
+      if (cdnboxState.netint !== undefined) { perfoptions.hostname = '127.0.0.1'; }
+      probeChild.send({ 'name': cdnbox.name, 'interval': 10000, 'options': perfoptions },
+                      function (e) { if (e !== null) probeChild = undefined; });
+    }
+
+    if (cdnboxState.ipv6 != undefined && 
+	(cdnboxState.perflastupdate6 === undefined || (Date.now() - cdnboxState.perflastupdate6 > 20000))) {
+      perfoptions.family = 6;
+      if (cdnboxState.netint !== undefined) { perfoptions.hostname = '::1'; }
+      probeChild.send({ 'name': cdnbox.name, 'interval': 10000, 'options': perfoptions },
+                      function (e) { if (e !== null) probeChild = undefined; });
+    }
   }
 }
 
